--- a/front/src/content/login/login.module.css
+++ b/front/src/content/login/login.module.css
@@ -1,73 +1,29 @@
+@import url(https://fonts.googleapis.com/css2?family=Pacifico&display=swap);
+
 .body {
-    height: 100vh;
-    color: #e0e0e0;
-    background: rgba(26, 31, 37, 1);
+    color: rgba(255, 255, 255, 0.44);
     text-align: center;
+    font-size: 20px;
 }
 
-.sign_in {
+.sign {
+    display: inline-block;
+    position: relative;
+    top: 13vh;
+    margin-left: 2vh;
+}
+
+.sign_in, .sign_up {
     position: relative;
     top: 20vh;
     margin: auto;
     width: 300px;
-    font-family: sans-serif;
-    letter-spacing: 1px;
 }
 
-.sign_up {
-    display: grid;
-    width: 500px;
+.iconEye {
     position: relative;
-    top: 20vh;
-    margin: auto;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 20px;
-    grid-column-gap: 20px;
-    grid-template-areas:
-        "u" "a"
-        "e" "p";
-}
-
-.sign_up .input {
-    color: #e0e0e0;
-    font-size: 14px;
-    width: 240px;
-    padding: 10px 0 10px 10px;
-    border: 1px solid #22272e;
-    border-radius: 5px;
-    background-color: transparent;
-    outline: none;
-    transition: 0.3s;
-}
-
-.sign_up .error {
-    color: #e0e0e0;
-    font-size: 16px;
-    width: 240px;
-    padding: 10px 0 10px 10px;
-    border: 1px solid #ff0000;
-    border-radius: 5px;
-    background-color: transparent;
-    outline: none;
-    transition: 0.3s;
-}
-
-.user {
-    grid-area: u;
-}
-
-.age {
-    grid-area: a;
-}
-
-.pass {
-    grid-area: p;
-}
-
-.email {
-    grid-area: e;
+    margin-left: 250px;
+    margin-top: -32px;
 }
 
 .icon {
@@ -93,28 +49,16 @@
     height: 40px;
     border: none;
     border-radius: 5px;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #e6b333;
+    font-family: 'Pacifico', cursive;
+    font-size: 20px;
+    color: #000000;
+    background-color: #fde30c;
     outline: none;
     cursor: pointer;
     transition: 0.3s;
 }
 
-.checkbox {
-    position: relative;
-    left: -5px;
-}
-
-.remember {
-    color: #7f8084;
-    margin: 10px;
-    font-size: 12px;
-}
-
-.sign_in .input {
+.input {
     color: #e0e0e0;
     font-size: 14px;
     width: 240px;
@@ -127,7 +71,7 @@
 }
 
 .error {
-    color: #e0e0e0;
+    color: #9b9c9f;
     font-size: 16px;
     width: 240px;
     padding: 10px 0 10px 60px;
@@ -144,35 +88,26 @@
 }
 
 form button:hover {
-    background: #ba8e2c;
+    background: #d3bc03;
 }
 
-.sign {
-    display: inline-block;
-    position: relative;
-    top: 13vh;
-    margin-left: 2vh;
-
-}
 
 .signButton {
     width: 150px;
     height: 40px;
     border: none;
-    border-radius: 20px;
+    border-radius: 7px;
     font-weight: bold;
     letter-spacing: 2px;
+    font-family: Comic Sans MS, serif;
     font-size: 18px;
     color: black;
-    background-color: #e6c835;
+    background-color: #fde202;
     outline: none;
     cursor: pointer;
     transition: 0.3s;
 }
 
 .signButton:hover {
-    background: #e69c6a;
-}
-.signButton:focus, .signButton:active {
-    background: #e68456;
+    background: #c9b201;
 }
