--- a/front/src/content/login/login.module.css
+++ b/front/src/content/login/login.module.css
@@ -1,113 +1,18 @@
-@import url(https://fonts.googleapis.com/css2?family=Pacifico&display=swap);
-
 .body {
-    color: rgba(255, 255, 255, 0.44);
-    text-align: center;
-    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+.form {
+    margin: 2vh;
+    max-width: 300px;
+
 }
 
-.sign {
-    display: inline-block;
-    position: relative;
-    top: 13vh;
-    margin-left: 2vh;
+.formButton {
+    width: 100%;
 }
 
-.sign_in, .sign_up {
-    position: relative;
-    top: 20vh;
-    margin: auto;
-    width: 300px;
-}
-
-.iconEye {
-    position: relative;
-    margin-left: 250px;
-    margin-top: -32px;
-}
-
-.icon {
-    position: relative;
-    padding: 0 10px;
-    width: 20px;
-    top: 32px;
-    font-size: 20px;
-    border-right: 1px solid #22272e;
-}
-
-.iconPass {
-    position: absolute;
-    padding: 0 10px;
-    bottom: 93px;
-    right: 0;
-    font-size: 20px;
-}
-
-.button_log {
-    margin-top: 20px;
-    width: 150px;
-    height: 40px;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Pacifico', cursive;
-    font-size: 20px;
-    color: #000000;
-    background-color: #fde30c;
-    outline: none;
+.formNavigate {
     cursor: pointer;
-    transition: 0.3s;
-}
-
-.input {
-    color: #e0e0e0;
-    font-size: 14px;
-    width: 240px;
-    padding: 10px 0 10px 60px;
-    border: 1px solid #22272e;
-    border-radius: 5px;
-    background-color: transparent;
-    outline: none;
-    transition: 0.3s;
-}
-
-.error {
-    color: #9b9c9f;
-    font-size: 16px;
-    width: 240px;
-    padding: 10px 0 10px 60px;
-    border: 1px solid #ff0000;
-    border-radius: 5px;
-    background-color: transparent;
-    outline: none;
-    transition: 0.3s;
-}
-
-.error_message {
-    position: relative;
-    top: 10px;
-}
-
-form button:hover {
-    background: #d3bc03;
-}
-
-
-.signButton {
-    width: 150px;
-    height: 40px;
-    border: none;
-    border-radius: 7px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    font-family: Comic Sans MS, serif;
-    font-size: 18px;
-    color: black;
-    background-color: #fde202;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.signButton:hover {
-    background: #c9b201;
+    color: rgb(24, 144, 255);
 }
