--- a/front/src/content/dialogs/dialogs.module.css
+++ b/front/src/content/dialogs/dialogs.module.css
@@ -12,7 +12,9 @@
 .chatName {
     font-weight: bold;
 }
-
+.chatPage{
+    display: flex;
+}
 .chatAndDateBlock {
     display: flex;
     justify-content: space-between;
@@ -29,7 +31,7 @@
     margin: 1vw;
     padding: 0.5vw;
     max-width: 400px;
-    border-bottom: #141414 1px solid;
+    border-bottom: rgba(20, 20, 20, 0.4) 1px solid;
 }
 
 .dialogContainer:hover {
@@ -72,7 +74,7 @@
     position: absolute;
     justify-content: center;
     align-items: center;
-    bottom: 2.5vw;
+    bottom: 1.5vw;
     max-width: 50px;
     max-height: 50px;
     width: 5vw;
@@ -99,7 +101,7 @@
 }
 
 .chat {
-    margin: 1vw 0 1vw 5.2vw;
+    margin: 1vw 0 1vw 5.4vw;
     padding: 0.5vw;
     border-radius: 12px;
     position: relative;
@@ -147,7 +149,67 @@
 }
 
 .messageInput {
-    border: rgba(10,10,10,0.1) solid 1px;
+    border: rgba(10, 10, 10, 0.1) solid 1px;
     outline: none;
     width: 100%;
+}
+
+.messageEditInput {
+    outline: none;
+    background: #c4f1c4;
+    border: none;
+    overflow: hidden;
+}
+.bodyMessageBlock{
+    display: flex;
+}
+.deleteBtn {
+    position: relative;
+    cursor: pointer;
+    font-size: 2vw;
+    top: -20px;
+}
+.date{
+    color: rgba(20, 20, 20, 0.3);
+    font-size: 1vw;
+    position: relative;
+    margin: 0.5vw 0.5vw 0 0.5vw;
+}
+.infoBlock{
+    width: 20%;
+}
+.infoBlock .chatName{
+    margin-left: 1vw;
+    text-align: center;
+    font-size: 2.5vw;
+    font-weight: 600;
+    border-bottom: rgba(20, 20, 20, 0.4) 1px solid;
+}
+.chatMemberBlock{
+    display: flex;
+    margin-top: 1.5vh;
+}
+.memberImg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 40px;
+    max-height: 40px;
+    width: 5vw;
+    height: 5vw;
+    border-radius: 50%;
+    background: rgba(175, 232, 255, 0.98);
+}
+.memberName{
+    margin-top: 1vh;
+    margin-left: 1vw;
+    font-size: 1.3vw;
+}
+.participantsBlock{
+    margin-left: 1vw;
+    margin-top: 3vw;
+}
+.participants{
+    overflow: auto;
+    height: 50vh;
 }
