--- a/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
+++ b/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
@@ -50,9 +50,10 @@
     overflow: auto;
     max-height: 50vh;
 }
-
-.addParticipantBtn {
+.addParticipantBtnBlock{
     text-align: center;
+}
+.addParticipantBtn {
     font-size: 2vw;
     cursor: pointer;
 }
