Online/offline status

--- a/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
+++ b/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
@@ -62,3 +62,12 @@
     overflow: auto;
     max-height: 30vh;
 }
+
+.offlineStatus{
+    margin-left: 1vw;
+    color: #5e5e5e;
+}
+.onlineStatus{
+    margin-left: 1vw;
+    color: #1b83fa;
+}
