Websockets for chat data and dialogs, fixed overflow on participants of chat and chat

--- a/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
+++ b/front/src/content/dialogs/ChatPage/chatInfo/chatInfo.module.css
@@ -47,7 +47,8 @@
 }
 
 .participants {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     max-height: 50vh;
 }
 .addParticipantBtnBlock{
@@ -59,7 +60,8 @@
 }
 
 .usersBlock {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     max-height: 30vh;
 }
 
