--- a/front/src/Components/Chat/Chat/index.module.css
+++ b/front/src/Components/Chat/Chat/index.module.css
@@ -1,10 +1,3 @@
-.chatContainer {
-    position: relative;
-    height: 75vh;
-    width: 80%;
-    object-fit: contain;
-}
-
 .truncateText {
     text-overflow: ellipsis;
     overflow: hidden;
@@ -25,23 +18,10 @@
     object-fit: cover;
 }
 
-.avatar {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    bottom: 1.5vw;
-    max-width: 50px;
-    max-height: 50px;
-    width: 5vw;
-    height: 5vw;
-    border-radius: 50%;
-    background: antiquewhite;
-}
-
 .messagesBlock {
-    height: 75vh;
+    height: 73vh;
     padding: 1vw;
+    margin: 1vw;
     overflow-x: hidden;
     overflow-y: auto;
 }
