--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,6 +6,11 @@ input:-webkit-autofill:active {
 }
 
 body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
